Fixed a bug in the code for switching between residue and fragment ion number in the plots. Moved project to version 1.5.6.